--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,23 @@
             <artifactId>quarkus-rest-jackson</artifactId>
         </dependency>
 
+        <!-- ## PERSISTENCE ## -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-orm</artifactId> <!-- Permite usar JPA estandar-->
+        </dependency>
+
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-orm-panache</artifactId> <!-- Permite usar Panache, una capa de abstracción sobre JPA -->
+        </dependency>
+
+        <!-- ## DATABASE DRIVER with H2## -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jdbc-h2</artifactId>
+        </dependency>
+
         <!-- ## TOOLS ## -->
         <!-- Lombok -->
         <dependency>
@@ -48,6 +65,19 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-config-yaml</artifactId> <!-- permite usar application.yaml o application.yml -->
+        </dependency>
+
+        <!-- MapStruct -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.5.5.Final</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- TESTING -->
